--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,19 @@
 on: workflow_dispatch
 
-#  push:
-#    branches:
-#      - "main"
-#      - "dev"
-#  pull_request:
-#    branches:
-#      - "main"
-#      - "dev"
 jobs:
-  echo:
-    runs-on: ubuntu-latest
-    steps:
-      - name: show the trigger
-        run: echo "I have been triggered by ${{github.event_name}}"
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v5
-      - name: printing folders
-        run: ls
+      - name: Setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: 24
+      - name: Install dependencies
+        run: npm ci
+
+
 
 
 
