--- a/.github/workflows/inputs.yml
+++ b/.github/workflows/inputs.yml
@@ -34,10 +34,10 @@ jobs:
         run: echo "Building from tag ${{inputs.tag}}"
   deploy:
     runs-on: ubuntu-latest
-    if: ${{!inputs.dry-run}}
+    if: ${{!inputs['dry-run']}}
     environment: ${{inputs.environment}}
     steps:
       - run:  echo "Deploying to environment ${{inputs.environment}}"
-      - run: echo "Debug mode is ${{github.event.inputs.debug}}"
+      - run: echo "Debug mode is ${{inputs.debug}}"
 
 
