--- a/.github/workflows/inputs.yml
+++ b/.github/workflows/inputs.yml
@@ -10,7 +10,7 @@ on:
         type: environment
         description: "Environment to deploy to"
         required: true
-        default: "staging"
+        default: staging
       debug:
         description: "Enable debug mode"
         required: false
